# ujs-web-srv

./: .gitignore  Cargo.toml  LICENSE  README.md  test_jsonrpc.sh  test_static.sh  test_static_compression.sh  test_websocket.sh
scripts/: add.js  async_test.js  db_dynamic_test.js  db_test.js  es_comprehensive.js  es_test.js  get_user.js  greet.js  hello.js  lib.ts  multiply.js  test_request.js  test_ts.ts  ts_esm_test.ts
src/: js_bridge.rs  main.rs  static_server.rs  test_utils.rs  websocket.rs
src/db_bridge/: README.md  mod.rs  ops.rs
src/js_bridge/: README.md  executor.rs  executor_legacy.rs  handler.rs  init.js  jsonrpc_handler.rs  loader.rs  mod.rs  models.rs  ops.rs  ops_legacy.rs
src/js_bridge/executor/: mod.rs  runtime_factory.rs  script_runner.rs
src/js_bridge/jsonrpc/: batch_processor.rs  handler.rs  mod.rs  request_parser.rs  request_validator.rs  response_builder.rs
src/js_bridge/ops/: db_ops.rs  mod.rs  request_ops.rs  response_ops.rs  utility_ops.rs
src/js_bridge/tests/: db_ops_test.rs  handler_tests.rs  jsonrpc_batch_processor.rs  jsonrpc_handler_tests.rs  jsonrpc_tests.rs  loader_tests.rs  mod.rs  models_tests.rs  ops_tests.rs  runtime_factory_test.rs  script_runner_tests.rs
static/: index.html  websocket_test.html
static/css/: style.css
static/js/: app.js
