[package]
name = "web_deno"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
deno_core = "0.376.0"
deno_ast = { version = "0.52.0", features = ["transpiling"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
deno_error = "0.7.3"

