[package]
name = "web_deno"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
deno_core = "0.376.0"
deno_ast = { version = "0.52.0", features = ["transpiling"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
deno_error = "0.7.3"
rayon = "1.10"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
diesel-dynamic-schema = { version = "0.2.2", features = ["postgres"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
tower = "0.5.2"
futures = "0.3.31"
mime_guess = "2.0.5"
tower-http = { version = "0.6.2", features = ["cors", "fs", "compression-gzip", "compression-br", "compression-deflate", "set-header", "trace"] }

